cabal-version:       2.4
name:                clash-vexriscv
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022 Google LLC
build-type:          Custom

data-files:
  example-cpu/VexRiscv.v

extra-tmp-files:
  build_out_dir/VexRiscv.v

extra-source-files:
  -- FFI code
  src/ffi/impl.cpp
  src/ffi/interface.h

  -- Scala VexRiscv CPU code
  example-cpu/project/build.properties
  example-cpu/project/Dependencies.scala
  example-cpu/src/main/scala/example/ExampleCpu.scala
  example-cpu/lib/vexriscv_2.11-2.0.0.jar
  example-cpu/lib/vexriscv_2.11-2.0.0.jar.license
  example-cpu/build.sbt
  Makefile

custom-setup
  setup-depends:
    base,
    Cabal,
    directory

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
      -- clash-prelude will set suitable version bounds for the plugins
  build-depends:
    base >= 4.14 && < 4.16,
    clash-prelude >= 1.6 && < 1.8,
    containers >= 0.6 && < 0.7,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

  other-modules: Paths_clash_vexriscv

library
  import: common-options
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    VexRiscv
    VexRiscv.FFI
    VexRiscv.TH
  build-depends:
    base,
    clash-prelude,
    clash-protocols,
    bytestring >= 0.10 && < 0.11,
    process >= 1.6 && < 1.8,
    directory >= 1.3 && < 1.4,
    filepath,
    containers,
    string-interpolate,
    template-haskell,
    Glob,
  extra-libraries: VexRiscvFFI, stdc++
  include-dirs: src/
