cabal-version:       3.8
name:                clash-vexriscv
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022 Google LLC
build-type:          Custom

data-files:
  example-cpu/VexRiscv.v

extra-tmp-files:
  build_out_dir/VexRiscv.v

extra-source-files:
  -- FFI code
  src/ffi/impl.cpp
  src/ffi/interface.h

  -- Scala VexRiscv CPU code
  example-cpu/project/build.properties
  example-cpu/project/Dependencies.scala
  example-cpu/src/main/scala/example/ExampleCpu.scala
  example-cpu/lib/vexriscv_2.11-2.0.0.jar
  example-cpu/lib/vexriscv_2.11-2.0.0.jar.license
  example-cpu/build.sbt
  Makefile

custom-setup
  setup-depends:
    base,
    Cabal,
    directory

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude

  -- See https://github.com/clash-lang/clash-compiler/pull/2511
  if impl(ghc >= 9.4)
    CPP-Options: -DCLASH_OPAQUE=OPAQUE
  else
    CPP-Options: -DCLASH_OPAQUE=NOINLINE

  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
      -- clash-prelude will set suitable version bounds for the plugins
  build-depends:
    base >= 4.16 && < 4.21,
    clash-prelude >= 1.9.0,
    containers >= 0.6 && < 0.8,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

  other-modules: Paths_clash_vexriscv

library
  import: common-options
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    VexRiscv
    VexRiscv.BlackBox
    VexRiscv.ClockTicks
    VexRiscv.FFI
    VexRiscv.JtagTcpBridge
    VexRiscv.Random
    VexRiscv.Reset
    VexRiscv.VecToTuple

  build-depends:
    base,
    bytestring >= 0.10 && < 0.13,
    clash-lib,
    clash-prelude >= 1.9.0,
    clash-protocols,
    containers,
    directory >= 1.3 && < 1.4,
    filepath,
    Glob,
    infinite-list,
    mtl,
    network,
    pretty-show,
    process >= 1.6 && < 1.8,
    random,
    string-interpolate,
    tagged,
    template-haskell,
    text,
  extra-libraries: VexRiscvFFI, stdc++
  include-dirs: src/

test-suite unittests
  import: common-options
  hs-source-dirs: tests/unittests
  type: exitcode-stdio-1.0
  main-is: main.hs
  ghc-options: -Wall -Wcompat -threaded -rtsopts
  other-modules:
    Tests.Extra
    Tests.VexRiscv.ClockTicks
    Tests.VexRiscv.Random
    Tests.VexRiscv.Reset
  build-depends:
    HUnit,
    base,
    clash-prelude-hedgehog  >= 1.9.0,
    clash-vexriscv,
    bytestring,
    hedgehog >= 1.0 && < 1.5,
    tasty >= 1.4 && < 1.6,
    tasty-hedgehog >= 1.2 && < 1.5,
    tasty-hunit,
    tasty-th,
    template-haskell,
