cabal-version:       2.4
name:                demo1-sim
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022 Google LLC

data-files:
  devicetree/*.dts

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
      -- clash-prelude will set suitable version bounds for the plugins
  build-depends:
    base >= 4.14 && < 4.16,
    clash-prelude >= 1.6 && < 1.8,
    containers >= 0.6 && < 0.7,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

  other-modules: Paths_demo1_sim

library
  import: common-options
  hs-source-dirs: src
  exposed-modules: TH
  build-depends:
    bytestring >= 0.10 && < 0.11,
    contranomy,
    contranomy-sim,

    bittide,
    base,
    containers,
    clash-prelude,
    clash-ghc,
    filepath,
    template-haskell,
    directory

executable demo1
  import: common-options
  main-is: Demo1.hs
  hs-source-dirs: bin
  build-depends:
    bytestring >= 0.10 && < 0.11,
    contranomy,
    contranomy-sim,

    bittide,
    base,
    containers,
    clash-prelude,
    clash-ghc,
    filepath,
    template-haskell,
    demo1-sim
