# SPDX-FileCopyrightText: 2022 Google LLC
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "ping-pong-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8.0"
riscv = "0.7.0"
bittide-sys = { path = "../../firmware/bittide-sys" }
