
# SPDX-FileCopyrightText: 2025 Google LLC
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "management-unit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Google LLC"]

[dependencies]
riscv-rt = "0.11.0"

[dependencies.bittide-sys]
path = "../../firmware-support/bittide-sys"
